--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
-    <a routerLink="/" routerLinkActive="mat-accent">MyPosts</a>
+    <a routerLink="/" routerLinkActive="mat-accent">MyMed</a>
   </span>
   <span class="spacer"></span>
   <ul>
@@ -18,3 +18,4 @@
     </li>
   </ul>
 </mat-toolbar>
+
