--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,8 +1,23 @@
-<form id="form" class="topBefore">
+<form>
 
-  <input id="name" type="text" placeholder="NAME">
-  <input id="email" type="text" placeholder="E-MAIL">
-  <input type="password" id="password" placeholder="Enter your Password">
-  <input id="submit" type="submit" value="GO!">
+  <mat-form-field class="formfield" appearance="outline">
+    <mat-label>Username/Email *</mat-label>
+    <input matInput placeholder="Enter">
+
+  </mat-form-field>
+  <br />
+  <mat-form-field  class="formfield" appearance="outline">
+    <mat-label>Password</mat-label>
+    <input matInput placeholder="Enter">
+  </mat-form-field>
+
+  <br />
+  <mat-form-field  class="formfield" appearance="outline">
+    <mat-label>Password</mat-label>
+    <input matInput placeholder="Confirm Password">
+  </mat-form-field>
+  <br />
+  <button type="submit" mat-raised-button>Signup</button>
+
 
 </form>
