--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,23 +1,46 @@
-<form>
+<form  #f="ngForm" (ngSubmit)="onFormSubmit(f)" >
 
   <mat-form-field class="formfield" appearance="outline">
-    <mat-label>Username/Email *</mat-label>
-    <input matInput placeholder="Enter">
+    <mat-label>Username/Email </mat-label>
+    <input ngModel name="email" #email = "ngModel" id="inputEmail" matInput placeholder="Enter" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required >
 
   </mat-form-field>
+  <div *ngIf="email.invalid && (email.dirty || email.touched)"
+       class="alert alert-danger">
+    <div *ngIf = "email.errors?.required">
+      <span class="error">Email field can't be blank</span>
+    </div>
+    <div *ngIf = "email.errors?.pattern && email.touched">
+      <span class="error">The email id doesn't seem right</span>
+    </div>
+  </div>
+  <br />
+  <div ngModelGroup="passwordgroup" #userPassword="ngModelGroup" required >
+  <mat-form-field  class="formfield" appearance="outline">
+    <mat-label>Password</mat-label>
+    <input ngModel id="inputPassword" name="pwd" name="password" matInput
+           minlength ="4" required
+           placeholder="Enter">
+  </mat-form-field>
+
   <br />
   <mat-form-field  class="formfield" appearance="outline">
     <mat-label>Password</mat-label>
-    <input matInput placeholder="Enter">
+    <input  ngModel id="confirmPassword" name="confirmPwd" matInput placeholder="Confirm Password" required minlength="4">
   </mat-form-field>
+    <div *ngIf="(userPassword.invalid|| userPassword.value?.pwd != userPassword.value?.confirmPwd) && (userPassword.touched)"
+         class="alert alert-danger">
 
+      <div *ngIf = "userPassword.invalid; else nomatch">
+        <span class="error">Password needs to be more than 4 characters</span>
+      </div>
+      <ng-template #nomatch >
+        <span class="error">Passwords don't match</span>
+      </ng-template>
+    </div>
+  </div>
   <br />
-  <mat-form-field  class="formfield" appearance="outline">
-    <mat-label>Password</mat-label>
-    <input matInput placeholder="Confirm Password">
-  </mat-form-field>
-  <br />
-  <button type="submit" mat-raised-button>Signup</button>
+  <button type="submit" [disabled]="!f.valid" mat-raised-button>Signup</button>
 
 
 </form>
