--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,17 +1,24 @@
-<form>
+<form #f = "ngForm"  (ngSubmit)="onFormSubmit(f)" >
 
   <mat-form-field class="formfield" appearance="outline">
-    <mat-label>Username/Email *</mat-label>
-    <input matInput placeholder="Enter">
+    <mat-label>Username/Email</mat-label>
+    <input matInput placeholder="Enter" ngModel #email = "ngModel" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" >
 
   </mat-form-field>
+  <div *ngIf = "email.errors?.pattern && email.touched">
+    <span class="error">The email id doesn't seem right</span>
+  </div>
   <br />
   <mat-form-field  class="formfield" appearance="outline">
     <mat-label>Password</mat-label>
-    <input matInput placeholder="Enter">
+    <input matInput ngModel #password="ngModel" minlength="4" placeholder="Enter" required>
   </mat-form-field>
-<br /> 
-  <button mat-raised-button>Login</button>
+
+  <div *ngIf = "password.valid && password.touched">
+    <span class="error">The email id doesn't seem right</span>
+  </div>
+<br />
+  <button mat-raised-button [disabled]="!f.valid">Login</button>
 
 
 </form>
