--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,23 +1,31 @@
-<form #f = "ngForm"  (ngSubmit)="onFormSubmit(f)" >
+<form #f = "ngForm"  (ngSubmit)="onFormSubmit(f)" novalidate>
 
   <mat-form-field class="formfield" appearance="outline">
     <mat-label>Username/Email</mat-label>
-    <input matInput placeholder="Enter" [(ngModel)] ="model.email" #email = "ngModel" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" >
+    <input matInput placeholder="Enter" name="email" ngModel #email = "ngModel" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" />
 
   </mat-form-field>
-  <div *ngIf = "email.errors?.pattern && email.touched">
+
+
+  <div *ngIf = "email.touched && email.errors?.pattern">
     <span class="error">The email id doesn't seem right</span>
   </div>
+  <div *ngIf = "email.touched && email.errors?.required">
+    <span class="error">The email cannot be empty</span>
+  </div>
+
   <br />
   <mat-form-field  class="formfield" appearance="outline">
     <mat-label>Password</mat-label>
-    <input matInput ngModel #password="ngModel" [(ngModel)]="model.password" minlength="4" placeholder="Enter" required>
+    <input matInput ngModel #password="ngModel" name="password" minlength="4" placeholder="Enter" required/>
   </mat-form-field>
 
-  <div *ngIf = "password.valid && password.touched">
-    <span class="error">The email id doesn't seem right</span>
+  <div *ngIf = "password.invalid && password.touched">
+    <span class="error">The password is wrong</span>
   </div>
 <br />
+
+
   <button mat-raised-button [disabled]="!f.valid">Login</button>
 
 
