--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,8 +1,14 @@
 <form #f = "ngForm"  (ngSubmit)="onFormSubmit(f)" novalidate>
 
   <mat-form-field class="formfield" appearance="outline">
-    <mat-label>Username/Email</mat-label>
-    <input matInput placeholder="Enter" name="email" ngModel #email = "ngModel" value="pd@gmail.com" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" />
+    <mat-label>Username</mat-label>
+    <input matInput placeholder="Enter" name="username" ngModel #username = "ngModel" required />
+
+  </mat-form-field>
+<br>
+  <mat-form-field class="formfield" appearance="outline">
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Enter" name="email" ngModel #email = "ngModel"  required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" />
 
   </mat-form-field>
 
@@ -17,7 +23,7 @@
   <br />
   <mat-form-field  class="formfield" appearance="outline">
     <mat-label>Password</mat-label>
-    <input matInput ngModel #password="ngModel" name="password" minlength="4" placeholder="Enter" value="'pdcoder'" required/>
+    <input matInput ngModel #password="ngModel" name="password" minlength="4" placeholder="Enter" required/>
   </mat-form-field>
 
   <div *ngIf = "password.invalid && password.touched">
