--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -1,3 +1,2 @@
-<p>
-  cart works!
-</p>
+<a routerLink="/checkout"><fa-icon [icon]="faCartPlus"></fa-icon><span class="cart">{{(shoppingCartItems$ | async).length}}
+</span></a>
