--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -16,6 +16,8 @@
     <li *ngIf="userIsAuthenticated">
       <button mat-button (click)="onLogout()">Logout</button>
     </li>
+    <li><app-cart></app-cart>
+    </li>
   </ul>
 </mat-toolbar>
 
