--- a/frontend/src/app/checkout/checkout.component.html
+++ b/frontend/src/app/checkout/checkout.component.html
@@ -11,15 +11,15 @@
     <label class="product-line-price">Total</label>
   </div>
 
-  <div class="product">
+  <div class="product" *ngFor="let items of shoppingCartItems">
     <div class="product-image">
       <img src="https://s.cdpn.io/3/dingo-dog-bones.jpg">
     </div>
     <div class="product-details">
-      <div class="product-title">Dingo Dog Bones</div>
-      <p class="product-description">The best dog bones of all time. Holy crap. Your dog will be begging for these things! I got curious once and ate one myself. I'm a fan.</p>
+      <div class="product-title">items.name</div>
+      <p class="product-description">{{items.desc}}.</p>
     </div>
-    <div class="product-price">12.99</div>
+    <div class="product-price">{{items.price | currency: 'INR'}}</div>
     <div class="product-quantity">
       <input type="number" value="2" min="1">
     </div>
@@ -31,26 +31,7 @@
     <div class="product-line-price">25.98</div>
   </div>
 
-  <div class="product">
-    <div class="product-image">
-      <img src="https://s.cdpn.io/3/large-NutroNaturalChoiceAdultLambMealandRiceDryDogFood.png">
-    </div>
-    <div class="product-details">
-      <div class="product-title">Nutro™ Adult Lamb and Rice Dog Food</div>
-      <p class="product-description">Who doesn't like lamb and rice? We've all hit the halal cart at 3am while quasi-blackout after a night of binge drinking in Manhattan. Now it's your dog's turn!</p>
-    </div>
-    <div class="product-price">45.99</div>
-    <div class="product-quantity">
-      <input type="number" value="1" min="1">
-    </div>
-    <div class="product-removal">
-      <button class="remove-product">
-        Remove
-      </button>
-    </div>
-    <div class="product-line-price">45.99</div>
-  </div>
-
+<div *ngIf="shoppingCartItems.length > 0 ; else nocomp">
   <div class="totals">
     <div class="totals-item">
       <label>Subtotal</label>
@@ -69,7 +50,10 @@
       <div class="totals-value" id="cart-total">90.57</div>
     </div>
   </div>
-
   <button class="checkout">Checkout</button>
+</div>
+  <ng-template #nocomp>
+    <h2>Your Cart is empty right now!</h2>
+  </ng-template>
 
 </div>
