--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -4,19 +4,20 @@
   </span>
   <span class="spacer"></span>
   <ul>
-    <li *ngIf="userIsAuthenticated">
+    <li *ngIf="isAuthenticated">
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
-    <li *ngIf="!userIsAuthenticated">
+    <li *ngIf="!isAuthenticated">
       <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
     </li>
-    <li *ngIf="!userIsAuthenticated">
+    <li *ngIf="!isAuthenticated">
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
-    <li *ngIf="userIsAuthenticated">
-      <button mat-button (click)="onLogout()">Logout</button>
+    <li *ngIf="isAuthenticated">
+      <button mat-button (click)="logout()">Logout</button>
     </li>
-    <li><app-cart></app-cart>
+    <li *ngIf="isAuthenticated">
+      <app-cart></app-cart>
     </li>
   </ul>
 </mat-toolbar>
