--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -1,2 +1,2 @@
-<a routerLink="/checkout"><fa-icon [icon]="faCartPlus"></fa-icon><span class="cart">{{(shoppingCartItems$ | async).length}}
-</span></a>
+<a routerLink="/checkout"><mat-icon matBadgeColor="accent" matBadge="{{(shoppingCartItems$ | async).length}}" matBadgePosition="above after"><fa-icon [icon]="faCartPlus"></fa-icon>
+</mat-icon></a>
