--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,7 +4,9 @@ html,body
 {
   width: 100%;
   height: 100%;
-  margin: 0px;
   padding: 0px;
+  position: relative;
+  min-height: 100%;
   overflow-x: hidden;
+  margin: 0;
 }
