--- a/frontend/src/app/checkout/checkout.component.scss
+++ b/frontend/src/app/checkout/checkout.component.scss
@@ -57,6 +57,7 @@ label {
 
 .shopping-cart {
   margin-top: -45px;
+  padding: 0 30px;
 }
 
 
@@ -247,4 +248,7 @@ input {
   }
 }
 }
+}
+.body{
+  padding: 0 30px;
 }
