--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,10 +1,12 @@
 footer {
-  background-color: #F8F8F8;
+  background-color: gold;
+  color: black;
   border-top: 1px solid #E7E7E7;
   text-align:center;
-  padding:10px;
+  padding:15px ;
   left: 0;
   bottom: 0;
-  height: 0px;
+  position: fixed;
+  height: 30px;
   width: 100%;
 }
