--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -3,10 +3,11 @@ footer {
   color: black;
   border-top: 1px solid #E7E7E7;
   text-align:center;
-  padding:15px ;
+  padding:15px 0 15px 0 ;
   left: 0;
   bottom: 0;
-  position: fixed;
+  position: relative;
   height: 30px;
   width: 100%;
+  margin-top: 100px;
 }
