--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,6 +2,9 @@
   <span>
     <a routerLink="/" routerLinkActive="mat-accent">MyMed</a>
   </span>
+  <form id="demo-1">
+    <input type="search" placeholder="Search">
+  </form>
   <span class="spacer"></span>
   <ul>
     <li *ngIf="isAuthenticated">
