--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,7 +5,7 @@ html,body
   width: 100%;
   height: 100%;
   padding: 0px;
-  min-height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
 }
