--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -1,9 +1,22 @@
+mat-toolbar {
+  padding: 12px;
+}
 ul {
+
   list-style: none;
   padding: 0;
   margin: 0;
 }
-
+span{
+  padding: 5px;
+}
+.menu > div{
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  color: white;
+  margin: 6px 0;
+}
 a {
   text-decoration: none;
   color: white;
@@ -11,6 +24,7 @@ a {
 
 ul {
   display: flex;
+  padding: 5px;
 }
 
 .spacer {
