--- a/frontend/src/app/individual-med/individual-med.component.html
+++ b/frontend/src/app/individual-med/individual-med.component.html
@@ -11,11 +11,10 @@
         <h1>{{message.name}}</h1>
         <div class="price">
           <h4 class="original_price">{{message.price + 140 | currency : 'INR'}}</h4>
-          <br/>
           <h4 class="sale_price">{{message.price | currency : 'INR'}}</h4>
         </div>
         <div class="product_description">
-          <p>{{message.desc}}</p>
+          <p><b><i>Description: </i></b>{{message.desc}}</p>
         </div>
         <div class="related_info">
           <span class="sku">SKU:1234567</span><span class="quantity">QTY Left:{{message.qty}}</span>
@@ -23,16 +22,15 @@
         <div class="options">
           <div class="buying">
             <div class="quantity">
-              <label for="quantity">QTY:</label>
-              <input type="text">
-            </div>
-            <div class="cart">
-              <a href="#" class="add">Add to Cart <i class="fa fa-shopping-cart fa-lg"></i></a>
+              <a (click)="addMed(message)" mat-raised-button color="primary" [ngStyle]="{'width' : '200px', 'margin-left':'0px'}">Add to Cart</a>
+              <br/>
+              <br/>
+              <a routerLink="/checkout" mat-raised-button color="success" [ngStyle]="{'width' : '200px', 'background-color' : 'green','color':'white'}">Checkout</a>
             </div>
           </div>
         </div>
         <div class="social">
-          <span class="share">Share This:</span><span class="buttons"><img src="https://i.imgur.com/M8D8rr8.jpg"/></span>
+          <span class="buttons"><img src="https://i.imgur.com/M8D8rr8.jpg"/></span>
         </div>
       </div>
     </div>
