--- a/frontend/src/app/cardlist/cardlist.component.html
+++ b/frontend/src/app/cardlist/cardlist.component.html
@@ -27,7 +27,7 @@
     </mat-card-header>
     <mat-card-content>
       <span>Visit : {{doctor.visit | currency : 'INR'}}</span>
-      <p [style.display]="'none'" class="card">{{doctor.description}}</p>
+      <p [@hover]="currentState">{{doctor.description}}</p>
     </mat-card-content>
   </mat-card>
 </div>
